helidon-storefront-full/yaml/deployment/serviceStorefront.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: storefront
  ports:
    - name: storefront
      protocol: TCP
      port: 8080
    - name: storefront-mgt
      protocol: TCP
      port: 9080
